<resources>
    <string name="app_name">EDPatch</string>
    <string name="action_settings">settings</string>
    <string name="actmsg_start">…start</string>
    <string name="actmsg_finish">…finish</string>
    <string name="actmsg_buildapk">build apk</string>
    <string name="actmsg_decodeapk">decode apk</string>
    <string name="funcname_cursorimg">show cursor</string>
    <string name="funcname_fab">float action button\n - Custom location of drive D\n - Custom Control\n - PulseAudio (XSDL)\n - Xegw</string>
    <string name="funcname_prefresl">container settings - custom resolution</string>
    <string name="funcname_softinput">android 11+ soft-input no-crashing</string>
    <string name="btntxt_startpatch">start patch</string>
    <string name="btntxt_installnew">Install</string>
    <string name="tv_patchingprogress">patching…</string>
    <string name="tv_logtitle">Log</string>
    <string name="actmsg_signapk">"sign apk "</string>
    <string name="actmsg_signaldone">---====all tasks====---</string>
    <string name="n1_exagear_apk_n2_n3_apk">usage: \n1. Select exagear\'s apk and wait for decoding to complete.\n2. Check the functions, click patch button and wait for building to complete.\n3. Click install button to install the patched apk.\nnotice:\n1. It is not guaranteed that patching will be successful.\n2. Apk\'s signature will be different after patching.Resign it on your own if necessary.</string>
    <string name="app_info">selected apk：%1$s</string>
    <string name="actmsg_fail">…failed</string>
    <string name="patchstep1_title">1/3. Select apk</string>
    <string name="funcname_selobb">select obb manually</string>
    <string name="funcname_fab_drived">Custom location of drive D</string>
    <string name="fraghelp_title2_steps">Steps</string>
    <string name="fraghelp_body_step_1">Select exagear apk from installed apks list or local files. Wait until decoded session completes.</string>
    <string name="fraghelp_body_step_2">Check the function you want to add. Function descriptions  are described below.</string>
    <string name="fraghelp_body_step_3">Click the \"start patch\" button and wait patientlly until building completes. The building info can be found in the log info.</string>
    <string name="fraghelp_body_step_4">After building the apk, click the \"install patched apk\" button to install it.</string>
    <string name="fraghelp_body_attention_1">This apk is an experimental project, and it is not guaranteed that the function will be added successfully</string>
    <string name="fraghelp_title1_func">Function descriptions</string>
    <string name="fraghelp_body_cursorimg">In some games, the mouse cursor only displays  as a small cross or does not display at all. This function changes the cursor to a customized mouse image. The image should be saved in z:/opt/mouse.png or assets/mouse.png in the apk file, The former has higher priority.</string>
    <string name="fraghelp_body_prefresl">In the container settings, allow users to customize desktop\'s resolution. It is compatible with the original preset resolution selection.</string>
    <string name="fraghelp_title1_guide">Usage</string>
    <string name="action_guide">Guide</string>
    <string name="fraghelp_body_attention_2">After clicking\"start patch\" button, please don\'t click or move to other view, otherwise problems may occur.</string>
    <string name="fraghelp_body_attention_3">"The patched apk is located in  /storage/emulated/0/Android/data/com.ewt45.patchapp/files/patchtmp/tmp/dist/tmp_sign.apk. You can check it manually with third-party file manager app. "</string>
    <string name="fraghelp_body_attention_4">If  the option \" use default signature\" in Settings is unchecked, after patching you need to uninstall the existing apks which use the same package name or sharedUserId (nornally the exagear and virgl overlay) first. If you need virgl overlay, please resign them with the same signature manually.</string>
    <string name="fraghelp_body_fab">"Add a floating action button at the right-end of the layout, providing some extra functions. "</string>
    <string name="fraghelp_body_drived">The location of drive D inside the container is normally corresponding to /storage/emulated/0/Donwload or Exagear directory in android file system.\nThis function allows user to change the directory\'s location and customize its name. There will be an availability check after changing the location. If changed successfully, app needs to be restart so that the location will be updated.</string>
    <string name="fraghelp_body_softinput">Fix the crash of showing softinput method on android11 and above. After fixed, the launching of input method will be delayed for one second.</string>
    <string name="fraghelp_body_selobb">If apk is installed and it can\'t detect obb file, a method will be provided for user to select the obb file with system file picker. \nOn android 11 and above system file picker cannot view the Android/data or Android/obb directory.</string>
    <string name="fraghelp_title2_attention">Attention</string>
    <string name="settings_delpatcherapk">clear patcher apk</string>
    <string name="settings_delpatcherapksummary">Generally not used</string>
    <string name="settings_version">version</string>
    <string name="settings_credits">Third-party project dependencies</string>
    <string name="settings_update">Update</string>
    <string name="settings_usedefaultkey">Use the default signature</string>
    <string name="settings_usedefaultkeysummary">If checked, No need to uninstall original one or resign the patched apk manually , but it may be recognized as virus.</string>
    <string name="tips_backup">Patched apk can\'t be restored, so please backup first!</string>
    <string name="tips_check_guide">Please check the Guide in action bar\'s menu before patching.</string>
    <string name="tips_waiting">Patching apk, please don\'t switch to other interface in case something goes wrong.</string>
    <string name="patchstep2_title">2/3. Select functions</string>
    <string name="patchstep3_titile">3/3. Finish</string>
    <string name="fragment_patch_label">Main</string>
    <string name="fraghelp_title2_brief">About</string>
    <string name="funcname_fab_cstmCtrl">Custom Control</string>
    <string name="fraghelp_body_brief">After adding some small functions to exagear (3.0.2) (mainly through modifying dex), I found it is too troublesome to manually change smali after all. \nEven if  a tutorial telling the modified location and codes is provided, it is not suitable for most people who have no experience of apk modification.\nSo I\'m wondering if I can make an application. The user only needs to click a button and wait for the automatic modification to complete, then install the new apk. \nThat\'s why this application was born. Due to my limited knowledge, 100% modification success or compatibility with all versions of exagear is not guaranteed.</string>
    <string name="fraghelp_body_cstmCtrl">Most of the options have descriptions that show up when long pressing. Select \"default\" of Control in container\'s properties. After entering the container, three-finger click to edit.\nMouse: Toggle visibility of mouse cursor. Switch gesture modes (default mode and touchpad mode) . Set mouse move speed.\nButtons: Customize buttons ( keys, text and position) . Switch layout mode (sidebar and free position) . Mouse button keys and joystick style buttons are available. \nStyle: Customize button color, transparency, size, sidebar background color.</string>
    <string name="funcname_shortcut">launch exe shortcut directly</string>
    <string name="fraghelp_body_shortcut">Long press the app icon, select an exe shortcut, and click to run it.\nHow to add an app shortcut: Click the menu of an exe shortcut on the \"Desktop\" page, and select \"Add as app shortcut\".\nNote: A maximum of four shortcuts can be added. Before launching from shortcut, ensure that the app is not running at background. After deleting the exe shortcut ( .desktop file), the app shortcut will be automatically deleted the next time launching the app . This feature requires Android 7 and above.</string>
    <string name="fraghelp_body_mw">Added a download icon on the left-top of  \"containers manager\" page, click to enter the \"add/remove wines\" page.\n- Local: Edit the downloaded or bundled Wines. After Clicking Install (extract) option, it will be displayed as \'active\', which can be selected when creating a new container. Use Uninstall (delete extracted folder) option to reduce local storage. Wines are stored at z:/opt/WineCollection.\n- Downloadable: Download all kinds of Wines from the Internet. Available sources are WineHQ(Official build, only ubuntu18-builds are listed) and Kron4ek(shrinked size, staging versions are not included). Downloaded Wines appear at \'Local\' page. \n\nhow to add bundled Wines into caches:\n`/opt/WineCollection/custom/$TagFolder/$WineFolder/bin/wine`\n- `$TagFolder` : the folder\'s name represents this wine\'s name. it shows when creating containers, should be unique.\n- `$WineFolder` : it should contains the `./bin/wine` binary file.\n- also in `$TagFolder` there should be a `.tar.xz` archive file, from which `$WineFolder` will be extracted.</string>
    <string name="funcname_mw">MultiWine v2</string>
    <string name="funcname_renderer">container settings - renderer options</string>
    <string name="funcname_fab_pulse">PulseAudio (XSDL)</string>
    <string name="fraghelp_body_pulse">PulseAudio is used to play audio, reducing sound problems. This function uses PulseAudio server extracted from Xserver XSDL. It requires 64-bit support on your device.</string>
    <string name="fraghelp_body_renderer">- Multiwine v1 used to be combined with this function internally, but v2 no more. If v2 is patched, you have to patch this manually if you want to continue to use it.\n- Set diffrent LD_LIBRARY_PATH for different renderers. libGL.so.1 will be loaded from this path with higher priority. You can edit paths in z:/opt/renderers.txt.\n- Some renderer options have additional operations:\n    - None turnip renderers: Redirect VK_ICD_FILENAMES to a non-exist file, in case these renderers won\'t work.\n    - virgl built-in: Launch libvirgl_test_server.so in a new java process. Only works in xegw apk. No need of Mcat or /opt/start.sh. Log is outputed at Android/data/packageName/logs/virglLog.txt.\n    - virtio-gpu: start Mcat. Before Xegw, mcat is used to start proot environment for this renderer, but in xegw it is rewriten to launch /opt/start.sh and won\'t launch proot automatically.</string>
    <string name="funcname_otherargv">container settings - Additional  Arguments</string>
    <string name="fraghelp_body_otherargv">- Params inserted when launching, viewable in /sdcard/x86-stderr.txt.\n- Set CPU cores, Autorun ib.exe, Kill services.exe.</string>
    <string name="btntxt_back_to_step1">Back</string>
    <string name="btntxt_view_new_apk">Open</string>
    <string name="patchstep3_tv_finish">Actions done. You can install the patched apk, or return to the front.</string>
    <string name="btntxt_selectapkfiles">Files</string>
    <string name="btntxt_selectapkinstalled">App list</string>
</resources>