<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="clear_patcher_apk"
        android:summary="@string/settings_delpatcherapksummary"
        android:title="@string/settings_delpatcherapk"
        android:widgetLayout="@layout/empty" />
    <!--            android:summary="开启android:debuggable选项"-->
<!--    <CheckBoxPreference-->
<!--        android:key="apk_debuggable"-->
<!--        android:title="生成的apk允许调试"-->
<!--        />-->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="use_default_signature"
        android:summary="@string/settings_usedefaultkeysummary"
        android:title="@string/settings_usedefaultkey" />
    <CheckBoxPreference
        android:key="credits"
        android:title="@string/settings_credits"
        android:widgetLayout="@layout/empty" />
    <CheckBoxPreference
        android:key="update"
        android:summary="https://github.com/ewt45/EDPatch/releases"
        android:title="@string/settings_update"
        android:widgetLayout="@layout/empty" />

    <CheckBoxPreference
        android:key="version"
        android:title="@string/settings_version"
        android:widgetLayout="@layout/empty" />
</PreferenceScreen>