<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentChoosePatch">

    <fragment
        android:id="@+id/fragmentChoosePatch"
        android:name="com.ewt45.patchapp.fragment.FragmentChoosePatch"
        android:label="@string/fragment_patch_label"
        tools:layout="@layout/fragment_choose_patch" >
            </fragment>
    <fragment
        android:id="@+id/settingPreferences"
        android:name="com.ewt45.patchapp.fragment.FragmentSettings"
        android:label="@string/action_settings" />
    <fragment
        android:id="@+id/fragmentHelp"
        android:name="com.ewt45.patchapp.fragment.FragmentHelp"
        android:label="@string/action_guide" />

</navigation>