<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentChoosePatch">

    <LinearLayout
        android:clipToPadding="false"
        android:padding="8dp"
        android:id="@+id/root_choose_patch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--        <TextView-->
<!--            android:layout_marginLeft="-8dp"-->
<!--            android:layout_marginRight="-8dp"-->
<!--            android:layout_marginTop="-8dp"-->
<!--            android:padding="8dp"-->
<!--            android:background="#7953d2"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/tips_check_guide" />-->


        <!--        <android.support.v7.widget.CardView-->
<!--            app:cardBackgroundColor="#50A5E8"-->
<!--            android:layout_margin="8dp"-->
<!--            app:contentPadding="16dp"-->
<!--            app:cardCornerRadius="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--                    </android.support.v7.widget.CardView>-->

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_patchstep1" />
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_select_apk_installed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntxt_selectapkinstalled" />

            <Button
                android:id="@+id/btn_select_apk_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntxt_selectapkfiles" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_patchstep2" />
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/check_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funcname_fab" />

            <CheckBox
                android:id="@+id/check_cursor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funcname_cursorimg" />

            <CheckBox
                android:id="@+id/check_resl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funcname_prefresl" />

            <CheckBox
                android:id="@+id/check_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funcname_softinput" />
            <CheckBox
                android:id="@+id/check_selobb"
                android:text="@string/funcname_selobb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_patchstep3" />
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_patch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntxt_startpatch" />

            <Button
                android:id="@+id/btn_install_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntxt_installnew"/>
        </LinearLayout>

        <!--    <TextSwitcher-->

        <!--        android:id="@+id/text_switcher"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content" />-->

        <LinearLayout
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:text="@string/tv_patchingprogress" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_infolist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:background="@android:drawable/alert_light_frame"
            android:padding="16dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
